--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" type="png" href="ubuntu-logo.png"/>
+    <link rel="icon" type="png" href="/images/ubuntu-logo.png"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
@@ -242,13 +242,13 @@
   </head>
   <body class="bg-[#0F172A] text-gray-200">
     <!-- Begin dev notification overlay -->
-    <div id="devNotification" class="fixed inset-0 bg-black bg-opacity-90 z-[10000] flex flex-col justify-center items-center">
+    <!-- <div id="devNotification" class="fixed inset-0 bg-black bg-opacity-90 z-[10000] flex flex-col justify-center items-center">
       <div class="bg-[#1E293B] p-8 rounded-lg text-center max-w-md mx-4">
         <h2 class="text-2xl font-bold text-white mb-4">Dev Notice</h2>
         <p class="text-gray-300 mb-6">The site is still under development. To continue please tap "Ok" button!</p>
         <button id="devNotificationBtn" class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-button font-medium transition-all duration-300">Ok</button>
       </div>
-    </div>
+    </div> -->
     <!-- End dev notification overlay -->
     <div class="custom-cursor"></div>
     <div class="custom-cursor-follower"></div>
@@ -722,14 +722,14 @@
           >
             <div class="relative">
               <img
-                src="https://readdy.ai/api/search-image?query=Modern%20e-commerce%20website%20interface%20with%20dark%20theme%2C%20showing%20product%20listings%20with%20minimalist%20design%2C%20clean%20UI%20with%20purple%20accent%20colors%2C%20professional%20web%20development%20project%20screenshot%2C%20high-tech%20feel&width=600&height=400&seq=project1&orientation=landscape"
-                alt="E-ticaret Platformu"
+                src=""
+                alt=""
                 class="w-full h-56 object-cover"
               />
               <div
                 class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                Web Application
+                Web Application (not accomplished)
               </div>
             </div>
             <div class="p-6">
@@ -775,8 +775,8 @@ Contains inventory tracking.
           >
             <div class="relative">
               <img
-                src="https://readdy.ai/api/search-image?query=Mobile%20fitness%20app%20interface%20with%20dark%20theme%2C%20showing%20workout%20tracking%20screens%2C%20user%20statistics%20with%20graphs%2C%20clean%20UI%20with%20purple%20accent%20colors%2C%20professional%20mobile%20app%20development%20project%20screenshot%20on%20smartphone&width=600&height=400&seq=project2&orientation=landscape"
-                alt="Fitness Takip Uygulaması"
+                src="Paste image"
+                alt=""
                 class="w-full h-56 object-cover"
               />
               <div
@@ -1305,61 +1305,7 @@ I will start. #Blender3D #Tutorial
             </a>
           </div>
         </div>
-        <div class="mt-12">
-          <div class="bg-[#1E293B] rounded-lg p-6">
-            <div class="flex items-center mb-6">
-              <div
-                class="w-12 h-12 flex items-center justify-center bg-[#1DB954]/20 rounded-full mr-4"
-              >
-                <i class="ri-spotify-fill text-2xl text-[#1DB954]"></i>
-              </div>
-              <div>
-                <h3 class="text-xl font-semibold">Spotify</h3>
-                <p class="text-gray-400">Listening right now</p>
-              </div>
-            </div>
-            <div class="flex flex-col md:flex-row items-center">
-              <div class="w-full md:w-1/4 mb-6 md:mb-0">
-                <img
-                  src="https://readdy.ai/api/search-image?query=Album%20cover%20art%20in%20cyberpunk%20style%2C%20dark%20background%20with%20neon%20purple%20and%20blue%20accents%2C%20minimalist%20design%2C%20abstract%20geometric%20elements%2C%20futuristic%20music%20album%20artwork&width=300&height=300&seq=album123&orientation=squarish"
-                  alt="Album Cover"
-                  class="w-full max-w-xs mx-auto rounded-lg"
-                />
-              </div>
-              <div class="w-full md:w-3/4 md:pl-8">
-                <h4 class="text-xl font-semibold mb-2">Synthwave Dreams</h4>
-                <p class="text-gray-400 mb-4">The Midnight</p>
-                <div class="mb-4">
-                  <div class="flex justify-between mb-2">
-                    <span class="text-sm text-gray-400">1:42</span>
-                    <span class="text-sm text-gray-400">4:18</span>
-                  </div>
-                  <div
-                    class="w-full h-2 bg-[#0F172A] rounded-full overflow-hidden"
-                  >
-                    <div
-                      class="h-full bg-[#1DB954] rounded-full"
-                      style="width: 40%"
-                    ></div>
-                  </div>
-                </div>
-                <div class="flex justify-center md:justify-start gap-4">
-                  <button
-                    class="w-10 h-10 sm:w-12 sm:h-12 flex items-center justify-center bg-[#0F172A] rounded-full"
-                  >
-                    <i class="ri-skip-back-fill text-lg sm:text-xl"></i>
-                  </button>
-                  <button
-                    class="w-12 h-12 sm:w-16 sm:h-16 flex items-center justify-center bg-[#1DB954] rounded-full"
-                  >
-                    <i class="ri-pause-fill text-xl sm:text-2xl text-black"></i>
-                  </button>
-                  <button
-                    class="w-10 h-10 sm:w-12 sm:h-12 flex items-center justify-center bg-[#0F172A] rounded-full"
-                  >
-                    <i class="ri-skip-forward-fill text-lg sm:text-xl"></i>
-                  </button>
-                </div>
+         <!-- Here something will come after maintenence!! -->
               </div>
             </div>
           </div>
@@ -1494,7 +1440,7 @@ I will start. #Blender3D #Tutorial
             <!-- Replace the text logo with your footer PNG -->
             <a href="https://tmstart.me/face_of_dreams" class="logo mb-4 inline-block">
               <!-- Replace 'your-footer-logo.png' with your PNG file path -->
-              <img src="ubuntu-logo.png" alt="Footer Logo" class="w-32">
+              <img src="/images/ubuntu-logo.png" alt="Footer Logo" class="w-32">
             </a>
             <p class="text-gray-400 mb-6">
               I serve creative software solutions & modern 3D designs.
@@ -1630,7 +1576,7 @@ I will start. #Blender3D #Tutorial
                 <a
                   href="mailto:justforcodings@hotmail.com"
                   class="text-gray-400 hover:text-white transition-colors"
-                  >Justforcodings@hotmail.com</a
+                  >justforcodings@hotmail.com</a
                 >
               </li>
               <li class="flex items-center">
@@ -1643,7 +1589,7 @@ I will start. #Blender3D #Tutorial
                 <span class="w-5 h-5 flex items-center justify-center mr-2">
                   <i class="ri-time-line"></i>
                 </span>
-                <span class="text-gray-400">GMT+3 (Ashgabat)</span>
+                <span class="text-gray-400">UTC+05 (Ashgabat)</span>
               </li>
             </ul>
           </div>
@@ -1841,18 +1787,18 @@ I will start. #Blender3D #Tutorial
           xAxis: {
             type: "category",
             data: [
-              "Oca",
-              "Şub",
+              "Jan",
+              "Feb",
               "Mar",
-              "Nis",
+              "Apr",
               "May",
-              "Haz",
-              "Tem",
-              "Ağu",
-              "Eyl",
-              "Eki",
-              "Kas",
-              "Ara",
+              "Jun",
+              "Jul",
+              "Agu",
+              "Sep",
+              "Oct",
+              "Nov",
+              "Dec",
             ],
             show: false,
           },
