--- a/index.html
+++ b/index.html
@@ -826,8 +826,8 @@ A comprehensive fitness application where he can see his graphics.
           >
             <div class="relative">
               <img
-                src="https://readdy.ai/api/search-image?query=Futuristic%20sci-fi%20character%203D%20model%20rendered%20in%20Blender%2C%20highly%20detailed%20with%20glowing%20elements%2C%20cyberpunk%20style%20with%20purple%20and%20blue%20accents%2C%20professional%203D%20modeling%20work%2C%20dark%20background%20with%20dramatic%20lighting&width=600&height=400&seq=project3&orientation=landscape"
-                alt="Sci-Fi Karakter Tasarımı"
+                src=""
+                alt=""
                 class="w-full h-56 object-cover"
               />
               <div
@@ -838,7 +838,7 @@ A comprehensive fitness application where he can see his graphics.
             </div>
             <div class="p-6">
               <h3 class="text-xl font-semibold mb-2">
-                Sci-Fi Character Design
+                Architectural Room design
               </h3>
               <p class="text-gray-400 mb-4">
                 Designed for a video game designed using blender
@@ -926,14 +926,14 @@ Timed data monitoring and reporting features.
           >
             <div class="relative">
               <img
-                src="https://readdy.ai/api/search-image?query=Mobile%20travel%20app%20interface%20with%20dark%20theme%2C%20showing%20destination%20discovery%20screens%2C%20trip%20planning%20features%2C%20clean%20UI%20with%20purple%20accent%20colors%2C%20professional%20mobile%20app%20development%20project%20screenshot%20on%20smartphone&width=600&height=400&seq=project5&orientation=landscape"
-                alt="Seyahat Planlama Uygulaması"
+                src="Paste image"
+                alt="Not even needed"
                 class="w-full h-56 object-cover"
               />
               <div
                 class="absolute top-4 right-4 bg-secondary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                Mobile App
+                Mobile App(Not accomplished)
               </div>
             </div>
             <div class="p-6">
