Making some changes>>> Future message: dont waste your time with vibe coding and big, unfinishable projectsgit add .

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
         <div class="text-center mb-16">
           <h2 class="text-3xl md:text-4xl font-bold mb-4">Portfolio</h2>
           <p class="text-gray-400 max-w-2xl mx-auto">
-            Projects I've completed in software development and 3D modeling.
+            Projects I've completed in software development and 3D modeling, but some of them are upcoming!
           </p>
         </div>
         <div class="mb-8 flex justify-center">
@@ -722,14 +722,14 @@
           >
             <div class="relative">
               <img
-                src=""
+                src="/images/Screenshot From 2025-05-31 10-31-08.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
               <div
                 class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                Web Application (not accomplished)
+                Web Application (accomplished)
               </div>
             </div>
             <div class="p-6">
@@ -759,12 +759,9 @@ Contains inventory tracking.
               </div>
               <button
                 class="text-primary hover:text-primary/80 inline-flex items-center project-details-btn"
-                data-project="project1"
+                data-project=""
               >
-                <span>See Details</span>
-                <span class="w-5 h-5 flex items-center justify-center ml-1">
-                  <i class="ri-arrow-right-line"></i>
-                </span>
+                <span><a href="https://sites.google.com/view/faceofdreamss/menu">See Details</a></span>
               </button>
             </div>
           </div>
@@ -775,14 +772,14 @@ Contains inventory tracking.
           >
             <div class="relative">
               <img
-                src="Paste image"
+                src="/images/images.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
               <div
                 class="absolute top-4 right-4 bg-secondary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                Mobile Application
+                Mobile Application(not accomplished)
               </div>
             </div>
             <div class="p-6">
@@ -826,7 +823,7 @@ A comprehensive fitness application where he can see his graphics.
           >
             <div class="relative">
               <img
-                src=""
+                src="/images/Has gowy.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
@@ -838,7 +835,7 @@ A comprehensive fitness application where he can see his graphics.
             </div>
             <div class="p-6">
               <h3 class="text-xl font-semibold mb-2">
-                Architectural Room design
+                Architectural Room design(Accomplished)
               </h3>
               <p class="text-gray-400 mb-4">
                 Designed for a video game designed using blender
@@ -877,7 +874,7 @@ contains basic animations.
           >
             <div class="relative">
               <img
-                src="https://readdy.ai/api/search-image?query=Dashboard%20analytics%20interface%20with%20dark%20theme%2C%20showing%20data%20visualization%20with%20charts%20and%20graphs%2C%20clean%20UI%20with%20purple%20accent%20colors%2C%20professional%20web%20development%20project%20screenshot%2C%20business%20intelligence%20platform&width=600&height=400&seq=project4&orientation=landscape"
+                src="/images/images.png"
                 alt="Analitik Dashboard"
                 class="w-full h-56 object-cover"
               />
@@ -926,7 +923,7 @@ Timed data monitoring and reporting features.
           >
             <div class="relative">
               <img
-                src="Paste image"
+                src="/images/images.png"
                 alt="Not even needed"
                 class="w-full h-56 object-cover"
               />
@@ -977,8 +974,8 @@ Comprehensive mobile application.
           >
             <div class="relative">
               <img
-                src="https://readdy.ai/api/search-image?query=Futuristic%20interior%20architectural%20visualization%20rendered%20in%20Blender%2C%20modern%20minimalist%20space%20with%20holographic%20elements%2C%20cyberpunk%20style%20with%20purple%20and%20blue%20lighting%2C%20professional%203D%20modeling%20work%2C%20dark%20atmosphere%20with%20dramatic%20lighting&width=600&height=400&seq=project6&orientation=landscape"
-                alt="Mimari Görselleştirme"
+                src="/images/My_Room.c.png"
+                alt=""
                 class="w-full h-56 object-cover"
               />
               <div
