Edited some preferences and redefined BG color & image

--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
       :where([class^="ri-"])::before { content: "\f3c2"; }
       body {
       font-family: 'Inter', sans-serif;
-      background-color: #0F172A;
+      background-color: #000000;
       color: #E2E8F0;
       overflow-x: hidden;
       }
       .gradient-text {
-      background: linear-gradient(90deg, #8B5CF6, #EC4899);
+      background: linear-gradient(90deg, #8B5CF6, #48ec48);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
       }
       .gradient-bg {
-      background: linear-gradient(135deg, rgba(139, 92, 246, 0.1), rgba(236, 73, 153, 0.1));
+      background: linear-gradient(135deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
       }
       .card-hover {
       transition: all 0.3s ease;
@@ -70,7 +70,7 @@
       width: 20px;
       height: 20px;
       border-radius: 50%;
-      background-color: rgba(139, 92, 246, 0.5);
+      background-color: rgba(165, 129, 250, 0.5);
       position: fixed;
       pointer-events: none;
       z-index: 9999;
@@ -82,7 +82,7 @@
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      border: 1px solid rgba(139, 92, 246, 0.3);
+      border: 1px solid rgba(159, 119, 253, 0.3);
       position: fixed;
       pointer-events: none;
       z-index: 9998;
@@ -100,14 +100,14 @@
       -webkit-appearance: none;
       width: 18px;
       height: 18px;
-      background: #8B5CF6;
+      background: #070016;
       border-radius: 50%;
       cursor: pointer;
       }
       input[type="range"]::-moz-range-thumb {
       width: 18px;
       height: 18px;
-      background: #8B5CF6;
+      background: #060015;
       border-radius: 50%;
       cursor: pointer;
       border: none;
@@ -648,7 +648,7 @@
             </div>
             <div class="bg-[#1E293B] rounded-lg overflow-hidden">
               <img
-                src="https://readdy.ai/api/search-image?query=3D%20modeling%20workspace%20with%20Blender%20interface%2C%20showing%20a%20complex%203D%20model%20being%20created%2C%20futuristic%20sci-fi%20character%20or%20object%2C%20dark%20environment%20with%20purple%20and%20blue%20highlights%2C%20professional%203D%20modeling%20scene%2C%20high%20detail&width=600&height=400&seq=blender123&orientation=landscape"
+                src="/images/kitchen.png"
                 alt="3D Modelleme Örneği"
                 class="w-full h-64 object-cover"
               />
@@ -830,7 +830,7 @@ A comprehensive fitness application where he can see his graphics.
               <div
                 class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                3D Modelling
+                3D Modelling(Accomplished)
               </div>
             </div>
             <div class="p-6">
@@ -881,7 +881,7 @@ contains basic animations.
               <div
                 class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                Web Development
+                Web Development(Not accomplished)
               </div>
             </div>
             <div class="p-6">
@@ -981,7 +981,7 @@ Comprehensive mobile application.
               <div
                 class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
               >
-                3D Modelling
+                3D Modelling(Accomplished)
               </div>
             </div>
             <div class="p-6">
