--- a/index.html
+++ b/index.html
@@ -347,7 +347,6 @@
     </header>
     <!-- Hero Section -->
     <section id="home" class="relative min-h-screen flex items-center pt-20">
-      <div class="hero-bg"></div>
       <div id="particles" class="absolute inset-0 z-0"></div>
       <div class="container mx-auto px-6 z-10">
         <div class="flex flex-col md:flex-row items-center">
@@ -386,7 +385,7 @@
               <!-- Updated: change source to your custom image file (place it in /home/groot/Desktop/Portfolio/web-demo/assets/) -->
               <img
                 src="/images/rick-sanchez-rick-3840x2160-9515.jpg"
-                alt="3D Avatar"
+                alt="Me"
                 class="w-full h-full object-cover rounded-full border-4 border-primary/30"
               />
               <div
@@ -1162,7 +1161,7 @@ Creative Technologies
             <div class="mb-6">
               <p class="text-gray-400 mb-4">
                 Programistler we kompyutere, Linux'a dusunyanler ucin Chat 💻.
-                 Bu Group adamlara mugt ve ynamly cesmelerden oz gozleyan maglumatlaryny,
+                 Bu Group adamlara mugt we ynamly cesmelerden oz gozleyan maglumatlaryny,
                   dusunmeyan zatlaryny, esasan LINUX barada maglumatlary tapmagy ozune maksat edinendir!!!
               </p>
               <div class="flex justify-between mb-2">
@@ -1791,7 +1790,7 @@ I will start. #Blender3D #Tutorial
               "May",
               "Jun",
               "Jul",
-              "Agu",
+              "Aug",
               "Sep",
               "Oct",
               "Nov",
