Image files deleted

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" type="png" href="/images/ubuntu-logo.png"/>
+    <link rel="icon" type="png" href="ubuntu-logo.png"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
       rel="stylesheet"
@@ -51,7 +51,7 @@
       overflow-x: hidden;
       }
       .gradient-text {
-      background: linear-gradient(90deg, #8B5CF6, #48ec48);
+      background: linear-gradient(90deg, #7036f6, #54f654);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
@@ -263,7 +263,7 @@
         <!-- Updated header logo size -->
         <a href="#home" class="logo">
           <!-- Replace 'ubuntu-logo.png' with your PNG file path -->
-          <img src="/images/ubuntu-logo.png" alt="Header Logo" class="w-[69px] h-[69px]">
+          <img src="ubuntu-logo.png" alt="Header Logo" class="w-[69px] h-[69px]">
         </a>
         <nav class="hidden md:flex items-center space-x-8">
           <a
@@ -382,9 +382,9 @@
           </div>
           <div class="w-full md:w-1/2 flex justify-center">
             <div class="relative w-80 h-80 md:w-96 md:h-96">
-              <!-- Updated: change source to your custom image file (place it in /home/groot/Desktop/Portfolio/web-demo/assets/) -->
+
               <img
-                src="/images/rick-sanchez-rick-3840x2160-9515.jpg"
+                src="rick-sanchez-rick-3840x2160-9515.jpg"
                 alt="Me"
                 class="w-full h-full object-cover rounded-full border-4 border-primary/30"
               />
@@ -647,7 +647,7 @@
             </div>
             <div class="bg-[#1E293B] rounded-lg overflow-hidden">
               <img
-                src="/images/kitchen.png"
+                src="kitchen.png"
                 alt="3D Modelleme Örneği"
                 class="w-full h-64 object-cover"
               />
@@ -715,19 +715,14 @@
           id="portfolioGrid"
         >
           <!-- Project 1 -->
-          <div
-            class="bg-[#1E293B] rounded-lg overflow-hidden card-hover"
-            data-category="web"
-          >
+          <div class="bg-[#1E293B] rounded-lg overflow-hidden card-hover" data-category="web">
             <div class="relative">
               <img
-                src="/images/Screenshot From 2025-05-31 10-31-08.png"
+                src="Screenshot From 2025-05-31 10-31-08.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
-              <div
-                class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
-              >
+              <div class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm">
                 Web Application (accomplished)
               </div>
             </div>
@@ -771,7 +766,7 @@ Contains inventory tracking.
           >
             <div class="relative">
               <img
-                src="/images/images.png"
+                src="images.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
@@ -806,9 +801,9 @@ A comprehensive fitness application where he can see his graphics.
               </div>
               <button
                 class="text-secondary hover:text-secondary/80 inline-flex items-center project-details-btn"
-                data-project="project2"
+                data-project=""
               >
-                <span>See Details</span>
+                <span><a href="https://github.com/Code-Creator-man/">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -816,19 +811,14 @@ A comprehensive fitness application where he can see his graphics.
             </div>
           </div>
           <!-- Project 3 -->
-          <div
-            class="bg-[#1E293B] rounded-lg overflow-hidden card-hover"
-            data-category="3d"
-          >
+          <div class="bg-[#1E293B] rounded-lg overflow-hidden card-hover" data-category="3d">
             <div class="relative">
               <img
-                src="/images/Has gowy.png"
+                src="has-gowy.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
-              <div
-                class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
-              >
+              <div class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm">
                 3D Modelling(Accomplished)
               </div>
             </div>
@@ -873,7 +863,7 @@ contains basic animations.
           >
             <div class="relative">
               <img
-                src="/images/images.png"
+                src="images.png"
                 alt="Analitik Dashboard"
                 class="w-full h-56 object-cover"
               />
@@ -922,7 +912,7 @@ Timed data monitoring and reporting features.
           >
             <div class="relative">
               <img
-                src="/images/images.png"
+                src="images.png"
                 alt="Not even needed"
                 class="w-full h-56 object-cover"
               />
@@ -967,19 +957,14 @@ Comprehensive mobile application.
             </div>
           </div>
           <!-- Project 6 -->
-          <div
-            class="bg-[#1E293B] rounded-lg overflow-hidden card-hover"
-            data-category="3d"
-          >
+          <div class="bg-[#1E293B] rounded-lg overflow-hidden card-hover" data-category="3d">
             <div class="relative">
               <img
-                src="/images/My_Room.c.png"
+                src="my-room.png"
                 alt=""
                 class="w-full h-56 object-cover"
               />
-              <div
-                class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm"
-              >
+              <div class="absolute top-4 right-4 bg-primary/90 text-white px-3 py-1 rounded-full text-sm">
                 3D Modelling(Accomplished)
               </div>
             </div>
@@ -1436,7 +1421,7 @@ I will start. #Blender3D #Tutorial
             <!-- Replace the text logo with your footer PNG -->
             <a href="https://tmstart.me/face_of_dreams" class="logo mb-4 inline-block">
               <!-- Replace 'your-footer-logo.png' with your PNG file path -->
-              <img src="/images/ubuntu-logo.png" alt="Footer Logo" class="w-32">
+              <img src="ubuntu-logo.png" alt="Footer Logo" class="w-32">
             </a>
             <p class="text-gray-400 mb-6">
               I serve creative software solutions & modern 3D designs.
@@ -1791,7 +1776,7 @@ I will start. #Blender3D #Tutorial
               "Jun",
               "Jul",
               "Aug",
-              "Sep",
+                           "Sep",
               "Oct",
               "Nov",
               "Dec",
