most stable version ever

--- a/index.html
+++ b/index.html
@@ -756,6 +756,9 @@ Contains inventory tracking.
                 data-project=""
               >
                 <span><a href="https://sites.google.com/view/faceofdreamss/menu">See Details</a></span>
+                <span class="w-5 h-5 flex items-center justify-center ml-1">
+                  <i class="ri-arrow-right-line"></i>
+                </span>
               </button>
             </div>
           </div>
@@ -847,9 +850,9 @@ contains basic animations.
               </div>
               <button
                 class="text-primary hover:text-primary/80 inline-flex items-center project-details-btn"
-                data-project="project3"
+                data-project=""
               >
-                <span>See Details</span>
+                <span><a href="https://github.com/Code-Creator-man/Blend-pro/blob/main/has-gowy.png">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -896,9 +899,9 @@ Timed data monitoring and reporting features.
               </div>
               <button
                 class="text-primary hover:text-primary/80 inline-flex items-center project-details-btn"
-                data-project="project4"
+                data-project=""
               >
-                <span>See Details</span>
+                <span><a href="https://github.com/Code-Creator-man/">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -947,9 +950,9 @@ Comprehensive mobile application.
               </div>
               <button
                 class="text-secondary hover:text-secondary/80 inline-flex items-center project-details-btn"
-                data-project="project5"
+                data-project=""
               >
-                <span>See Details</span>
+                <span><a href="https://github.com/Code-Creator-man/">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -991,9 +994,9 @@ It includes lighting and material studies.
               </div>
               <button
                 class="text-primary hover:text-primary/80 inline-flex items-center project-details-btn"
-                data-project="project6"
+                data-project=""
               >
-                <span>See Details</span>
+                <span><a href="https://github.com/Code-Creator-man/Blend-pro/blob/main/my-room.png">See Details</a></span>
                 <span class="w-5 h-5 flex items-center justify-center ml-1">
                   <i class="ri-arrow-right-line"></i>
                 </span>
@@ -1002,11 +1005,11 @@ It includes lighting and material studies.
           </div>
         </div>
         <div class="mt-12 text-center">
-          <button
+          <!-- <button
             class="bg-[#1E293B] hover:bg-[#2D3748] text-white px-6 py-3 rounded-button font-medium transition-all duration-300 whitespace-nowrap"
           >
             More Projects
-          </button>
+          </button> -->
         </div>
       </div>
     </section>
