before using API

--- a/index.html
+++ b/index.html
@@ -282,6 +282,11 @@
             >Portfolio</a
           >
           <a
+            href="#news"
+            class="text-gray-300 hover:text-white transition-colors"
+            >News</a
+          >
+          <a
             href="#social"
             class="text-gray-300 hover:text-white transition-colors"
             >Social Media</a
@@ -331,6 +336,11 @@
               class="text-gray-300 hover:text-white transition-colors py-2"
               >Portfolio</a
             >
+             <a
+            href="#news"
+            class="text-gray-300 hover:text-white transition-colors"
+            >News</a
+          >
             <a
               href="#social"
               class="text-gray-300 hover:text-white transition-colors py-2"
@@ -1012,6 +1022,18 @@ It includes lighting and material studies.
           </button> -->
         </div>
       </div>
+      <!-- News Section -->
+      <section id="news" class="py-20 relative gradient-bg">
+        <div class="container mx-auto px-6">
+          <div class="text-center mb-16">
+            <h2 class="text-3xl md:text-4xl font-bold mb-4">Latest News</h2>
+            <p class="text-gray-400 max-w-2xl mx-auto">
+              Stay updated with the latest news and articles.
+            </p>
+            <a href="#" class="text-primary hover:underline">Read More</a>
+          </div>
+        </div>
+      </section>
     </section>
     <!-- Social Media Section -->
     <section id="social" class="py-20 relative gradient-bg">
@@ -1300,9 +1322,9 @@ I will start. #Blender3D #Tutorial
     <section id="contact" class="py-20 relative">
       <div class="container mx-auto px-6">
         <div class="text-center mb-16">
-          <h2 class="text-3xl md:text-4xl font-bold mb-4">Questions</h2>
+          <h2 class="text-3xl md:text-4xl font-bold mb-4">Contact & Questions</h2>
           <p class="text-gray-400 max-w-2xl mx-auto">
-            You can contact with me your Danishnesses, Projects and Questions:.
+            You can contact with me your Danishnesses, Projects and Questions: This section might not work well!!!
           </p>
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
@@ -1491,7 +1513,14 @@ I will start. #Blender3D #Tutorial
                 <a
                   href="#portfolio"
                   class="text-gray-400 hover:text-white transition-colors"
-                  >Portfolyo</a
+                  >Portfolio</a
+                >
+              </li>
+               <li>
+                <a
+                  href="#news"
+                  class="text-gray-400 hover:text-white transition-colors"
+                  >News</a
                 >
               </li>
               <li>
@@ -1501,13 +1530,7 @@ I will start. #Blender3D #Tutorial
                   >Social Media</a
                 >
               </li>
-              <li>
-                <a
-                  href="#contact"
-                  class="text-gray-400 hover:text-white transition-colors"
-                  >Contact</a
-                >
-              </li>
+
             </ul>
           </div>
           <div>
@@ -1524,7 +1547,7 @@ I will start. #Blender3D #Tutorial
                 <a
                   href="#"
                   class="text-gray-400 hover:text-white transition-colors"
-                  >Mobil Application</a
+                  >Mobile Application</a
                 >
               </li>
               <li>
@@ -1545,7 +1568,9 @@ I will start. #Blender3D #Tutorial
                 <a
                   href="#"
                   class="text-gray-400 hover:text-white transition-colors"
-                  >Danishness</a
+                  ><a href="mailto:berdimuhammet0770@outlook.com"
+                  class="text-gray-400 hover:text-white transition-colors" 
+                  >Consultancy</a></a
                 >
               </li>
             </ul>
@@ -1627,7 +1652,7 @@ I will start. #Blender3D #Tutorial
       </div>
     </div>
     <!-- Loading Screen -->
-    <div
+    <!-- <div
       class="fixed inset-0 bg-[#0F172A] z-[9999] flex items-center justify-center"
       id="loadingScreen"
     >
@@ -1642,7 +1667,7 @@ I will start. #Blender3D #Tutorial
           ></div>
         </div>
       </div>
-    </div>
+    </div> -->
     <script id="customCursorScript">
       document.addEventListener("DOMContentLoaded", function () {
         const cursor = document.querySelector(".custom-cursor");
