package.json and some of the steps to APIs

--- a/index.html
+++ b/index.html
@@ -1592,7 +1592,7 @@ I will start. #Blender3D #Tutorial
                 <span class="w-5 h-5 flex items-center justify-center mr-2">
                   <i class="ri-map-pin-line"></i>
                 </span>
-                <span class="text-gray-400">Mary, Turkmenistan</span>
+                <span class="text-gray-400"><a href="https://www.google.com/maps/place/Mary,+Turkmenistan/@37.6041845,61.7990462,13z/data=!4m6!3m5!1s0x3f418e242a6088b7:0x945f91c717829ac3!8m2!3d37.6092461!4d61.8643252!16zL20vMDN3ZDMx?entry=ttu&g_ep=EgoyMDI1MDUyOC4wIKXMDSoASAFQAw%3D%3D">Mary, Turkmenistan</a></span>
               </li>
               <li class="flex items-center">
                 <span class="w-5 h-5 flex items-center justify-center mr-2">
